(library
 (name BacCaml)
 (public_name pmincaml.bacCaml)
 (modules
  (:standard \ main))
 (flags
  (-w -4-33-40-41))
 (libraries str MinCaml)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.enum)))

(executable
 (name main)
 (public_name mcmm)
 (flags
  (-w -4-33-40-41))
 (modules Main)
 (package mcmm)
 (libraries MinCaml BacCaml))
