(library
 (name TLA)
 (inline_tests)
 (public_name pmincaml.tla)
 (modules :standard \ main)
 (libraries str MinCaml)
 (flags
  (-w -4-33-40-41))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.enum ppx_inline_test)))

(executable
 (name main)
 (public_name tlac)
 (modules Main)
 (libraries str MinCaml TLA)
 (flags
  (-w -4-33-40-41))
 (package tlac)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.enum ppx_inline_test)))
